www/styles/pinhole-photo-tile.css
.pinhole-tile-view .swat-tile {
	width: 106px;
	height: auto;
	padding: 10px;
	margin: 5px 10px;
	float: left;
	text-align: center;
	border: 1px solid transparent;
}

.pinhole-tile-view .swat-tile:hover {
	border: 1px solid #555753;
}

.pinhole-tile-view .swat-tile span.photo-title {
	display: block;
	height: 2em;
	padding: 0.3em 0;
}

.pinhole-tile-view img {
	display: block;
	margin: 0 auto;
	padding: 2px;
	border: 1px solid #888a85;
	background: #555753;
}

